--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -1,20 +1,40 @@
 @charset "UTF-8";
 
+@font-face {
+    font-family: 'BMEULJIRO';
+    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_twelve@1.0/BMEULJIRO.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+}
+
 #wrap{
-	width : 700px;
-	
 	margin : auto;
+	height : 100vh;
 }
 
-header{
-	height:70px;
+#mainA{
+	font-family: 'BMEULJIRO';
 }
 
-#body{
-	height : 350px;
+#mainA:link { color: black; text-decoration: none;}
+#mainA:visited { color: black; text-decoration: none;}
+#mainA:hover { color: black; text-decoration: none;}
+
+
+#textbody1{
+	width : 350px;
+	border : 1px solid gray;
 }
-#body > #textbody{
-	width : 300px;
+
+#textbody2{
+	width : 350px;
+	height : 50px;
+	border : 1px solid gray;
+}
+
+
+#mainbody{
+	
 }
 
 .footer_hr{
